force-app/main/default/objects/order_line_item__c/fields/Refund_Status__c.field-meta.xml
<CustomField>
    <fullName>Refund_Status__c</fullName>
    <label>Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Credit</fullName>
            </value>
            <value>
                <fullName>Partial Credit</fullName>
            </value>
            <value>
                <fullName>Full Refund</fullName>
            </value>
            <value>
                <fullName>Partial Refund</fullName>
            </value>
            <value>
                <fullName>Full Coupon</fullName>
            </value>
            <value>
                <fullName>Partial Coupon</fullName>
            </value>
            <value>
                <fullName>No Refund/Credit</fullName>
            </value>
            <value>
                <fullName>Partial Refund/Coupon/Credit</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
                <isActive>false</isActive>
                <label>Credit</label>
            </value>
            <value>
                <fullName>No Refund</fullName>
                <isActive>false</isActive>
                <label>No Refund</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>