force-app/main/default/objects/order_line_item__c/fields/Room_Configration__c.field-meta.xml
<CustomField>
    <fullName>Room_Configration__c</fullName>
    <formula>IF(TEXT(Pricing_Model__c)=&apos;QTY&apos;,  VALUE(TEXT(Quantity__c)) , 

IF( TEXT(Pricing_Model__c)=&apos;Solo&apos; ,  VALUE(TEXT(PAX_Quantity__c)) ,  VALUE(TEXT(PAX_Quantity__c))/2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Configration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>