force-app/main/default/objects/order_line_item__c/fields/Room_Price__c.field-meta.xml
<CustomField>
    <fullName>Room_Price__c</fullName>
    <formula>Sub_Options__r.Price_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>