force-app/main/default/objects/order_line_item__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <formula>Sub_Options__r.title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Type</label>
    <type>Text</type>
</CustomField>