force-app/main/default/objects/order_line_item__c/fields/Rooms_Required__c.field-meta.xml
<CustomField>
    <fullName>Rooms_Required__c</fullName>
    <formula>Room_Configration__c</formula>
    <label>Rooms Required</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>