force-app/main/default/objects/order_line_item__c/fields/SB_Number_of_Nights__c.field-meta.xml
<CustomField>
    <fullName>SB_Number_of_Nights__c</fullName>
    <formula>IF( (Total_SB_Nights__c  ==0 || Count_SB_Nights__c==0) , 0, Total_SB_Nights__c  / Count_SB_Nights__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stay Behind Number of Nights</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>