force-app/main/default/objects/order_line_item__c/fields/Send_COVID_PRE_Reoffer_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_COVID_PRE_Reoffer_Email__c</fullName>
    <label>Send COVID PRE Reoffer Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original offer not accepted</fullName>
            </value>
            <value>
                <fullName>Sent - Original offer not accepted</fullName>
            </value>
            <value>
                <fullName>Original offer accepted and coupon created</fullName>
            </value>
            <value>
                <fullName>Original offer accepted and coupon used</fullName>
            </value>
            <value>
                <fullName>Sent - Original offer accepted and coupon created</fullName>
            </value>
            <value>
                <fullName>Sent - Original offer accepted and coupon used</fullName>
            </value>
            <value>
                <fullName>Pre-comms sent from new order</fullName>
            </value>
            <value>
                <fullName>Original offer accepted</fullName>
                <isActive>false</isActive>
                <label>Original offer accepted</label>
            </value>
            <value>
                <fullName>Sent - Original offer accepted</fullName>
                <isActive>false</isActive>
                <label>Sent - Original offer accepted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>