force-app/main/default/objects/order_line_item__c/fields/sm_Hotel_Price__c.field-meta.xml
<CustomField>
    <fullName>sm_Hotel_Price__c</fullName>
    <label>Hotel Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>