force-app/main/default/objects/order_line_item__c/fields/Source_OLI__c.field-meta.xml
<CustomField>
    <fullName>Source_OLI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source OLI</label>
    <referenceTo>order_line_item__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>