force-app/main/default/objects/order_line_item__c/fields/SplitBeforeSecured__c.field-meta.xml
<CustomField>
    <fullName>SplitBeforeSecured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SplitBeforeSecured</label>
    <type>Checkbox</type>
</CustomField>