force-app/main/default/objects/order_line_item__c/fields/Stay_Behind_Accommodation_Required__c.field-meta.xml
<CustomField>
    <fullName>Stay_Behind_Accommodation_Required__c</fullName>
    <formula>IF( Total_SB_Accom_Nights__c  &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stay Behind Accommodation Required</label>
    <type>Checkbox</type>
</CustomField>