force-app/main/default/objects/order_line_item__c/fields/Stay_Qty__c.field-meta.xml
<CustomField>
    <fullName>Stay_Qty__c</fullName>
    <label>Stay Qty</label>
    <summarizedField>Order_Night_POE__c.order_quantity__c</summarizedField>
    <summaryForeignKey>Order_Night_POE__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>