force-app/main/default/objects/order_line_item__c/fields/Sub_Options__c.field-meta.xml
<CustomField>
    <fullName>Sub_Options__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Note :-  For Stay type Orders, change to Sub-Option will be applied to all the OLIs of this Order</inlineHelpText>
    <label>Sub Options</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>sub_options__c.options__c</field>
            <operation>equals</operation>
            <valueField>$Source.ordexp_Options__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sub_options__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>