force-app/main/default/objects/order_line_item__c/fields/TAD_Order_OLI_SFID__c.field-meta.xml
<CustomField>
    <fullName>TAD_Order_OLI_SFID__c</fullName>
    <formula>ordexp_TAD_Order__r.Full_SFID__c &amp;&quot;/&quot;&amp; CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAD Order + OLI SFID</label>
    <type>Text</type>
</CustomField>