force-app/main/default/objects/order_line_item__c/fields/Tad_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Tad_Order_Status__c</fullName>
    <formula>TEXT(ordexp_TAD_Order__r.ordexp_master_status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tad Order Status</label>
    <type>Text</type>
</CustomField>