force-app/main/default/objects/order_line_item__c/fields/Total_AE_Accom__c.field-meta.xml
<CustomField>
    <fullName>Total_AE_Accom__c</fullName>
    <label>Total AE Accom</label>
    <summarizedField>AddOn__c.Accommodation_night__c</summarizedField>
    <summaryFilterItems>
        <field>AddOn__c.AE_Nights__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AddOn__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>AE/SB</value>
    </summaryFilterItems>
    <summaryForeignKey>AddOn__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>