force-app/main/default/objects/order_line_item__c/fields/Total_Coupon_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Coupon_Discount__c</fullName>
    <label>Total Coupon Discount</label>
    <summarizedField>OrderLineCoupon__c.Discount_Amount_del__c</summarizedField>
    <summaryForeignKey>OrderLineCoupon__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>