force-app/main/default/objects/order_line_item__c/fields/Total_OLI_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_OLI_Commission__c</fullName>
    <formula>OLI_Commission__c +  ordexp_wholesale_commissions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total OLI Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>