force-app/main/default/objects/order_line_item__c/fields/Total_OLI_Commission_Neg__c.field-meta.xml
<CustomField>
    <fullName>Total_OLI_Commission_Neg__c</fullName>
    <formula>-Total_OLI_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total OLI Commission (Neg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>