force-app/main/default/objects/order_line_item__c/fields/Total_surcharge__c.field-meta.xml
<CustomField>
    <fullName>Total_surcharge__c</fullName>
    <formula>IF(ordexp_orderRT__c=&apos;TAD&apos; || ordexp_orderRT__c=&apos;TC&apos; , IF(TEXT(Pricing_Model__c ) = &apos;Solo&apos;, General_Pricing__r.Solo_Surcharge_AUD__c, 0),  
  IF(ordexp_orderRT__c=&apos;TNZ&apos; || ordexp_orderRT__c=&apos;WT&apos;, IF(TEXT(Pricing_Model__c ) = &apos;Solo&apos;, General_Pricing__r.Solo_Surcharge_NZD__c, 0), 0) ) 
* PAX_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>