force-app/main/default/objects/order_line_item__c/fields/Tour_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Tour_Start_Date__c</fullName>
    <description>General Tour Start Date</description>
    <formula>ordexp_TAD_Order__r.ordexp_departure_date__r.date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tour Start Date</label>
    <type>Date</type>
</CustomField>