force-app/main/default/objects/order_line_item__c/fields/Web_Agent__c.field-meta.xml
<CustomField>
    <fullName>Web_Agent__c</fullName>
    <formula>ordexp_TAD_Order__r.Web_Agent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Agent</label>
    <type>Text</type>
</CustomField>