force-app/main/default/objects/order_line_item__c/validationRules/Check_BER_Refund_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_BER_Refund_Amount</fullName>
    <active>true</active>
    <description>Validate that BER Refund Amount is less than (Payment Received + Coupons)</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( BER_Refund_Amount__c )) ,
BER_Refund_Amount__c &gt; ordexp_Total_OLI_Net_Amount__c 
)</errorConditionFormula>
    <errorDisplayField>BER_Refund_Amount__c</errorDisplayField>
    <errorMessage>Check the BER Refund Amount - this cannot be greater than the total paid + any coupons used</errorMessage>
</ValidationRule>