force-app/main/default/objects/order_line_item__c/validationRules/Check_BER_Refund_Coupon_Withholding_Amts.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_BER_Refund_Coupon_Withholding_Amts</fullName>
    <active>true</active>
    <description>Validate that (BER Refund Amount + BER Coupon Amount + BER Withholding Amount) EQUALS (Payment Received + Coupons)</description>
    <errorConditionFormula>AND(
OR(ISPICKVAL(ordexp_CVC__c,&quot;BER Refunded (Refund &amp; Coupon)&quot;),ISPICKVAL(ordexp_CVC__c,&quot;BER Accepted (Refund &amp; Coupon)&quot;),ISPICKVAL(ordexp_CVC__c,&quot;BER Send Offer (Refund &amp; Coupon)&quot;)),
NOT(ISBLANK( BER_Coupon_Amount__c )) ,
BER_Offer_Balance__c &lt;&gt; 0
)</errorConditionFormula>
    <errorDisplayField>BER_Coupon_Amount__c</errorDisplayField>
    <errorMessage>Check the BER Refund Amount PLUS BER Coupon Amount PLUS BER Withholding Amount. The total of these MUST equal the total paid + any coupons used.</errorMessage>
</ValidationRule>