force-app/main/default/objects/order_line_item__c/validationRules/isPaxReducing.validationRule-meta.xml
<ValidationRule>
    <fullName>isPaxReducing</fullName>
    <active>true</active>
    <description>User cannot reduce the Pax Quantity. User may have to cancel this order.</description>
    <errorConditionFormula>PRIORVALUE(PAX_Qty__c) &gt; PAX_Qty__c &amp;&amp;  isSplit__c  =  false</errorConditionFormula>
    <errorDisplayField>PAX_Quantity__c</errorDisplayField>
    <errorMessage>You cannot reduce the Pax Quantity. You may have to cancel this order.</errorMessage>
</ValidationRule>