force-app/main/default/objects/order_line_item__c/validationRules/Oli_Model_Change_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Oli_Model_Change_validation</fullName>
    <active>false</active>
    <errorConditionFormula>(ISPICKVAL( OLI_Status__c , &apos;Secured&apos;) || ISPICKVAL( OLI_Status__c , &apos;Active&apos;)  ) &amp;&amp;  ISCHANGED( Pricing_Model__c )</errorConditionFormula>
    <errorMessage>The pricing model can not be changed, please follow the Credit Type Cancellation Process to make this change.</errorMessage>
</ValidationRule>