force-app/main/default/objects/order_line_item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ordexp_oli_name__c</columns>
    <columns>OLI_Status__c</columns>
    <columns>ordexp_TAD_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>OLI-167</value>
    </filters>
    <label>All</label>
</ListView>